vault-ingress.yaml
#ingress for vault
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.1.0.0/16
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: vault.worths.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
  tls:
  - hosts:
    - vault.worths.cloud
    secretName: vault-tls
